--- a/index.html
+++ b/index.html
@@ -5,6 +5,19 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Quiz Registration</title>
     <link rel="stylesheet" href="index.css">
+    <style>
+        /* Add some basic styles for the iframe */
+        .iframe-container {
+            display: none; /* Initially hidden */
+            margin-top: 20px;
+        }
+        iframe {
+            width: 100%;
+            height: 600px; /* Adjust height as needed */
+            border: 0;
+            border-radius: 8px;
+        }
+    </style>
 </head>
 <body>
     <div class="form-container">
@@ -21,6 +34,12 @@
 
             <button type="submit">Submit</button>
         </form>
+    </div>
+
+    <!-- Iframe Container -->
+    <div class="iframe-container" id="iframeContainer">
+        <h2>Join the Quiz!</h2>
+        <iframe id="mentiIframe" src="" allowfullscreen></iframe>
     </div>
 
     <script>
@@ -42,11 +61,22 @@
                 method: 'POST',
                 body: formData,
             })
-            .then(response => response.json())
+            .then(response => {
+                if (!response.ok) {
+                    throw new Error('Network response was not ok');
+                }
+                return response.json();
+            })
             .then(data => {
                 console.log('Success:', data);
-                window.location.href = "https://www.menti.com/alo4ha8efb8m"; 
                 
+                // Set the iframe src to the Mentimeter quiz link and show it
+                const iframe = document.getElementById('mentiIframe');
+                iframe.src = "https://www.menti.com/alo4ha8efb8m";
+                
+                // Display the iframe container
+                const iframeContainer = document.getElementById('iframeContainer');
+                iframeContainer.style.display = 'block';
             })
             .catch(error => {
                 console.error('Error:', error);
