--- a/index.html
+++ b/index.html
@@ -5,26 +5,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Quiz Registration</title>
     <link rel="stylesheet" href="index.css">
-    <style>
-        /* Add some basic styles for the iframe */
-        .iframe-container {
-            display: none; /* Initially hidden */
-            margin-top: 20px;
-        }
-        iframe {
-            width: 100%;
-            height: 600px; /* Adjust height as needed */
-            border: 0;
-            border-radius: 8px;
-        }
-    </style>
 </head>
 <body>
     <div class="form-container">
         <h1>TRF Registration Form</h1>
         <form id="studentform">
             <label for="name">Name:</label><br>
-            <input type="text" id="name" name="name" required><br><br>
+            <!-- <input type="text" id="name" name="name" required><br><br> -->
+            <input type="text" id="name" name="name" pattern="[A-Za-z\s]+" title="Please enter only letters" required><br><br>
 
             <label for="prn">PRN:</label><br>
             <input type="text" id="prn" name="prn" maxlength="8" pattern="\d{8}" title="Please enter exactly 8 digits" required><br><br>
@@ -34,12 +22,6 @@
 
             <button type="submit">Submit</button>
         </form>
-    </div>
-
-    <!-- Iframe Container -->
-    <div class="iframe-container" id="iframeContainer">
-        <h2>Join the Quiz!</h2>
-        <iframe id="mentiIframe" src="" allowfullscreen></iframe>
     </div>
 
     <script>
@@ -54,29 +36,18 @@
 
             const formData = new FormData();
             formData.append('name', name);
-            formData.append('prn', prn);
+            formData.append('prn', prn); 
             formData.append('phone', phone);
 
             fetch(sheetURL, {
                 method: 'POST',
                 body: formData,
             })
-            .then(response => {
-                if (!response.ok) {
-                    throw new Error('Network response was not ok');
-                }
-                return response.json();
-            })
+            .then(response => response.json())
             .then(data => {
                 console.log('Success:', data);
+                window.location.href = "https://k2j8b207rp2.typeform.com/to/FDAlkMpB"; 
                 
-                // Set the iframe src to the Mentimeter quiz link and show it
-                const iframe = document.getElementById('mentiIframe');
-                iframe.src = "https://www.menti.com/alo4ha8efb8m";
-                
-                // Display the iframe container
-                const iframeContainer = document.getElementById('iframeContainer');
-                iframeContainer.style.display = 'block';
             })
             .catch(error => {
                 console.error('Error:', error);
@@ -85,3 +56,5 @@
     </script>
 </body>
 </html>
+
+<!-- https://www.menti.com/alo4ha8efb8m -->
