--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
             .then(response => response.json())
             .then(data => {
                 console.log('Success:', data);
-                window.location.href = "https://k2j8b207rp2.typeform.com/to/FDAlkMpB"; 
+                window.location.href = " https://www.menti.com/alxwbn49j8tw "; 
                 
             })
             .catch(error => {
